--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-input-range": "^1.3.0",
     "react-redux": "^5.0.7",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
